# ExitGuard

./: .gitignore  .gitmessage  CLAUDE.md  ONBOARDING.md  README.md  docker-compose.yml  인수인계.md
backend/: .env.example  CLAUDE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9ccfc39f8962_add_column_comments.py  af86fe666b76_core_schema_case_item_approval_evidence_.py  cdc2ffe29606_labor_precedent_corpus.py
backend/app/: config.py  db.py  main.py
backend/app/core/: dependencies.py  exceptions.py  schemas.py
backend/app/domains/case/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/catalog/: dependencies.py  models.py  repository.py
backend/app/domains/compare/: __init__.py  dependencies.py  router.py  schemas.py  service.py  signal_extractor.py
backend/app/domains/evidence/: dependencies.py  hashing.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/labor/: __init__.py  models.py  repository.py  rollup.py
backend/app/routers/: health.py
backend/app/services/: case.py  compare.py  evidence.py  rails.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/api/: test_case_flow_happy_path.py  test_compare_flow.py  test_defense_report_export.py  test_validation_error_envelope.py
backend/tests/integration/: test_evidence_concurrency.py
backend/tests/unit/: test_case_approve_gating.py  test_compare_whitelist.py  test_evidence_hashing.py  test_gate_compute.py  test_item_transitions.py  test_signal_extractor.py
dobby/: IDENTITY.md  (+2 more)
(+94 files in other folders)
